# example-monorepo

./: README.md  pyproject.toml
