[project]
name = "example-monorepo"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
example-logging = { workspace = true }
example-service = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
